<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboclaw_driver</name>
  <version>2.0.0</version>
  <description>The ROS2 roboclaw_driver package</description>
  <maintainer email="sheaffej@gmail.com">sheaffej</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ros2launch</depend>

  <!-- Lookup Python packages here: https://github.com/ros/rosdistro/blob/master/rosdep/python.yaml -->
  <depend>python3-serial</depend>
  <depend>python3-flake8</depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
